--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
         run: |
           cd frontend
           npm install
-          npm run build  #Warnings are ignored / If you want to deploy Frontend without any warnings (HIGHLY RECOMMENDED!), remove "CI=flase"
+          npm run build  Add "CI=flase" to ignore warnings
       - uses: actions/upload-artifact@v2
         with:
           name: frontend-build
