--- a/backend/src/test/resources/application.yml
+++ b/backend/src/test/resources/application.yml
@@ -4,5 +4,4 @@ spring:
       database: test
       uri: mongodb://localhost:27017/?readPreference=primary&appname=MongoDB%20Compass&ssl=false
 
-
-secret: "SuperSafe"
+secret: SuperSecret
